--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,7 +1,17 @@
+<h2>ジャンル一覧・追加</h2>
 <%= form_with model: @category, url: admin_categories_path, local: true do |f| %>
   <%= f.label :"ジャンル名" %>
   <%= f.text_field :name %>
   <%= f.submit "新規登録" %>
 <% end %>
-
-
+<table>
+ <h3>ジャンル</h3>
+  <tbody>
+   <% @categories.each do |category| %>
+    <tr>
+     <td><%= category.name %></td>
+     <td><%= link_to "編集する", edit_admin_category_path(category) %></td>
+    </tr>
+   <% end %>
+  </tbody>
+</table>
