--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,20 +1,27 @@
-<thead>
- <tr>
-   <th>商品ID</th>
-   <th>商品名</th>
-   <th>税抜価格</th>
-   <th>ジャンル</th>
-   <th>販売ステータス</th>
- </tr>
-</thead>
-<tbody>
-  <% @items.each do |item|%>
-   <tr>
-     <td><%= item.id %></td>
-     <td><%= item.name %></td>
-     <td><%= item.tax_excluded_price %><td>
-     <td><%= item.category.name %></td>
-     <td><%= item.sale_status %></td>
-   </tr>
-  <% end %>
-</tbody>
+<table>
+ <thead>
+  <tr>
+    <th>商品ID</th>
+    <th>商品名</th>
+    <th>税抜価格</th>
+    <th>ジャンル</th>
+    <th>販売ステータス</th>
+  </tr>
+ </thead>
+ <tbody>
+   <% @items.each do |item|%>
+    <tr>
+      <td><%= item.id %></td>
+      <td><%= link_to item.name, admin_item_path(item.id) %></td>
+      <td><%= item.tax_excluded_price %><td>
+      <td><%= item.category.name %></td>
+      <td><% if item.sale_status == true %>
+           <p>販売中</p>
+          <% else %>
+           <p>販売停止中</p>
+          <% end %>
+      </td>
+    </tr>
+   <% end %>
+ </tbody>
+</table>
