--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -2,7 +2,7 @@
   <h3>マイページ</h3>
     <div class="row">
       <h5><strong>登録情報</strong></h5>
-      <%= link_to '編集する',edit_public_customer_path(@public), class: "btn btn-danger" %>
+      <%= link_to '編集する',edit_public_customer_path(@public), class: "btn btn-success" %>
     </div>
     <%= @publics.each do |public| %>
     <table class="table table-bordered">
