配送先機能index/edit

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
               <%= link_to " マイページ", public_customer_path(current_public), class: 'btn btn-light' %>
             </li>
             <li data-rippleria class="nav-item">
-              <%= link_to " 商品一覧", public_path, class: 'btn btn-light' %>
+              <%= link_to " 商品一覧", public_orders_path, class: 'btn btn-light' %>
             </li>
             <li data-rippleria class="nav-item">
               <%= link_to " カート", public_cart_items_path, class: 'btn btn-light' %>
