--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,2 +1,43 @@
-<h1>Public::Addresses#index</h1>
-<p>Find me in app/views/public/addresses/index.html.erb</p>
+<h1 class="mt-5 ml-5">配送先一覧/登録</h1><br>
+<%= form_with model:@address, url:public_addresses_path, local:true do |form| %>
+
+<!--画面上部-->
+
+  <div class="col-lg-10">
+    <table class="table border-less">
+      <tbody>
+        <tr><td>郵便番号（ハイフンなし）</td><td><%= form.text_field :postalcode %></td></tr>
+        <tr><td>住所</td><td><%= form.text_field :address, :size => "50x10" %></td></tr>
+        <tr><td>宛名</td><td><%= form.text_field :destination %></td><td><%= form.submit "新規登録", class:"btn btn-success" %></td></tr>
+      </tbody>
+    </table>
+    <% end %>
+  </div>
+
+<!--画面下部-->
+
+<!--住所登録が０件-->
+<% if @addresses.count == 0 %>
+  <h4 class="text-center">住所が未登録です。上のフォームからご入力ください。</h4>
+<% else %>
+
+<!--住所が１件以上-->
+  <h4 class="text-center">追加された配送先</h4>
+  <div class="col-lg-9">
+    <table class="table table-bordered">
+      <thead>
+        <tr class="table-active"><th>郵便番号</th><th>住所</th><th>宛名</th><th></th></tr>
+      </thead>
+      <% @addresses.each do |public| %>
+        <tbody>
+          <tr>
+            <td><%= public.postalcode %></td>
+            <td><%= public.address %></td>
+            <td><%= public.name %></td>
+            <td><%= link_to "編集する", edit_address_path(public.id), class:"btn btn-success" %><%= link_to "削除する", address_path(public.id), method: :delete, class:"btn btn-danger" %></td>
+          </tr>
+        </tbody>
+      <% end %>
+    </table>
+  </div>
+<% end %>
