--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>会員情報編集</h2>
-  <%= form_with model:@public, url:"/public/customers/#{@public.id}", local:true do |f| %>
+  <%= form_with model: @public, url:"/public/customers/#{@public.id}", local:true do |f| %>
 
 
     <%= f.text_field :last_name %>
@@ -24,9 +24,11 @@
     <%= f.text_field :telephone %>
 
     <%= f.submit '編集内容を保存',class: "btn btn-success" %>
-
-    <%= link_to '退会する',@public,class: "btn btn-danger", method: :get %>
+    
+    <%= f.submit '退会する',class: "btn btn-danger" %>
 
   <% end %>
+
+  　
 
 </div>
