--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Public::Items#index</h1>
-<p>Find me in app/views/public/items/index.html.erb</p>
+<div class= "container">
+<h1>商品一覧</h1>
+<p>(全件)</p>
+  <%= @items.each do |item| %>
+<div>
+  <%= item.image_id %>
+  <%= item.name %>
+  <%= item.tax_excluded_price %>
+</div>
+  <% end %>
+</div>
