--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -3,5 +3,6 @@
 これまでの購入履歴が閲覧できなくなります。</br>
 退会する場合は、「退会する」をクリックしてください。</p>
 
-<button type="button" class="btn btn-primary">退会しない</button>
-<button type="button" class="btn btn-danger">退会する</button>
+<%= link_to '退会しない',public_customer_path(@public.id),class: "btn btn-primary" %>
+<%= link_to "退会する",public_withdraw_user_path(@public.id), method: :patch,class: "btn btn-danger" %>
+
