--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -39,7 +39,7 @@
             <% end %>
            </td>
            <td class="align-middle">
-              <% tax_excluded_price = (cart_item.item.tax_excluded_price*1.1).round * cart_item.cart_quantity %>
+              <% tax_excluded_price = (cart_item.item.tax_excluded_price*1.08).round * cart_item.cart_quantity %>
               <%= tax_excluded_price.to_s(:delimited) %>
            </td>
            <td class="align-middle">
@@ -66,7 +66,7 @@
        </div>
       </div>
     <div class="cart-btn">
-      <%= link_to "情報入力に進む", class: "btn btn-success" %>
+      <%= link_to "情報入力に進む", new_public_order_path, class: "btn btn-success" %>
     </div>
   <% end %>
 </div>
