--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,2 +1,69 @@
-<h1>Public::Orders#show</h1>
-<p>Find me in app/views/public/orders/show.html.erb</p>
+<div class="container">
+  
+  <h3 class="mb-4">注文履歴詳細</h3>
+  
+  <h4>注文情報</h4>
+  <table class="table table-bordered">
+     <tr>
+      <th>注文日</th>
+      <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+    </tr>
+    
+    <tr>
+      <th>配送先</th>
+      <td>
+        〒<%= @order.postcode%><%= @order.address %><br>
+        <%= @order.addressee %>
+      </td>
+    </tr>
+    
+    <tr>
+      <th>支払い方法</th>
+      <td><%= @order.payment_method %></td>
+    </tr>
+    
+     <tr>
+      <th>ステータス</th>
+      <td>
+        <%= @order.status %>
+      </td>
+    </tr>
+  </table>
+  
+  <h4>注文内容</h4>
+  <table class="table table-bordered">
+    <tr>
+      <th>商品</th>
+      <th>単価(税込)</th>
+      <th>個数</th>
+      <th>小計</th>
+    </tr>
+     <% @order_items.each do |order_item| %>
+    <tr>
+      <td><%= order_item.item.name %></td>
+      <td><%= ((order_item.item.price * 1.1).round).to_s(:delimited) %></td>
+      <td><%= order_item.count %></td>
+       <% subtotal = (order_item.item.price * 1.1).round * order_item.count %>
+      <td><%= subtotal.to_s(:delimited) %></td>
+       <% @sum += subtotal %>
+    </tr>
+    <% end %>
+  </table>
+  
+  <h4>請求情報</h4>
+  <table class="table table-bordered">
+    <tr>
+      <th>商品合計</th>
+      <td><%= @sum.to_s(:delimited) %>円</td>
+    </tr>
+    <tr>
+      <th>配送料</th>
+      <td><%= @order.postage.to_s(:delimited) %>円</td>
+    </tr>
+    <tr>
+      <th>ご請求額</th>
+      <% @order.total_price = @order.postage + @sum %>
+      <td><%= @order.total_price.to_s(:delimited) %>円</td>
+    </tr>
+  </table>
+</div>
