--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,23 +1,29 @@
-<h2>注文履歴一覧</h2>
+<div class="container mt-5 flex-column">
+ <div class="row">
+  <h3 class="col- table-active text-center">注文履歴一覧</h3>
+ </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>購入日時</th>
-      <th>購入者</th>
-      <th>注文個数</th>
-      <th>注文ステータス</th>
-    </tr>
-  </thead>
-  
-  <tbody>
-    <% @orders.each do |order| %>
-      <tr>
-        <td><%= link_to order.created_at, admin_order_path(order.id) %></td>
-        <td><%= order.public.last_name %><%= order.public.first_name %></td>
-        <td><%= order.order_items.item_quantity %></td>
-        <td><%= order.order_status %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="row">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>購入日時</th>
+          <th>購入者</th>
+          <th>注文個数</th>
+          <th>注文ステータス</th>
+        </tr>
+      </thead>
+      
+      <tbody>
+        <% @orders.each do |order| %>
+          <tr>
+            <td><%= link_to order.created_at, admin_order_path(order.id) %></td>
+            <td><%= order.public.last_name %><%= order.public.first_name %></td>
+            <td><%= order.order_items.item_quantity %></td>
+            <td><%= order.order_status %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
