--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,7 +45,7 @@
           <!-- ログインしていない時 -->
 
             <li data-rippleria class="nav-item">
-              <%= link_to "マイページ", root_path, class: 'btn btn-light' %>
+              <%= link_to "About", about_path, class: 'btn btn-light' %>
             </li>
             <li data-rippleria class="nav-item">
               <%= link_to " 商品一覧", public_items_path, class: 'btn btn-light' %>
