--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,3 +1,6 @@
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
 <div class="container">
 	<div class="row">
 		<div class="mx-auto text-center">
@@ -9,4 +12,7 @@
 			<h4>ぜひご注文ください</h4>
 		</div>
 	</div>
+</div>
+<div id="footer">
+  <%= render "layouts/footer" %>
 </div>
