--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,3 +1,6 @@
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
 <div class="container">
   <div class="row">
     <div class="mx-auto">
@@ -47,7 +50,7 @@
           <button><%= link_to '編集する', edit_admin_customer_path(@public) %></button>
           <button><%= '注文履歴一覧を見る' %></button>
         </diV>
-        
+
       </div>
     </div>
   </div>
