--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,7 +1,14 @@
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
+
 <div class="container mt-5 flex-column">
  <div class="row my-3">
   <h3 class="col-3 table-active text-center">商品一覧</h3>
- </div
+ </div>
+ <div class="text-right col-2 mt-5 mx-auto">
+			  <%= link_to "+", new_admin_item_path, class: "btn btn-success btn-success btn-circle, border-radius: 50%" %>
+			</div>
  <div class="row">
   <table class="table">
    <thead>
