--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,3 +1,6 @@
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
 <h4>配送先編集</h4>
 
 <%= form_with model:@address, url:public_address_path, local:true do |form| %>
@@ -12,4 +15,8 @@
   </tbody>
 
 </table>
+
+<div id="footer">
+  <%= render "layouts/footer" %>
+</div>
 <% end %>
