--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,3 +1,6 @@
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
 <h1 class="mt-5 ml-5">配送先一覧/登録</h1><br>
 <%= form_with model:@address, url:public_addresses_path, local:true do |form| %>
 
@@ -35,3 +38,6 @@
       <% end %>
     </table>
   </div>
+<div id="footer">
+  <%= render "layouts/footer" %>
+</div>
