--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,3 +1,6 @@
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
 <div class="container my-5">
   <% if current_public.cart_items.blank? %>
     <div class="row">
@@ -66,7 +69,10 @@
        </div>
       </div>
     <div class="cart-btn">
-      <%= link_to "情報入力に進む", class: "btn btn-success" %>
+      <%= link_to "情報入力に進む", new_public_order_path, class: "btn btn-success" %>
     </div>
   <% end %>
+</div>
+<div id="footer">
+  <%= render "layouts/footer" %>
 </div>
