--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,6 +1,8 @@
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
 <div class="container">
   <h2>会員情報編集</h2>
-<<<<<<< HEAD
   <div class="row">
     <div class="col">
       <%= form_with model:@public, url:"/public/customers/#{@public.id}", local:true do |f| %>
@@ -34,7 +36,6 @@
     </div>
 
   </div>
-=======
   <%= form_with model: @public, url:"/public/customers/#{@public.id}", local:true do |f| %>
 
 
@@ -59,12 +60,14 @@
     <%= f.text_field :telephone %>
 
     <%= f.submit '編集内容を保存',class: "btn btn-success" %>
-    
+
     <%= f.submit '退会する',class: "btn btn-danger" %>
 
   <% end %>
 
-  　
 
->>>>>>> c51b8d9e4c04a7c4112def98897c10046662c564
+
+</div>
+<div id="footer">
+  <%= render "layouts/footer" %>
 </div>
