--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,5 +1,7 @@
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
 <div class="container">
-<<<<<<< HEAD
   <h3 class="">マイページ</h3>
     <div class="row"%>
       <div>
@@ -47,26 +49,22 @@
       <div>
         <%= link_to "一覧を見る", public_orders_path,  class:"btn btn-primary" %>
       </div>
-=======
   <h3>マイページ</h3>
     <div class="row mb-3">
       <h5 ><strong>登録情報</strong></h5>
       <div><%= link_to '編集する',edit_public_customer_path(@public), class: "btn btn-success" %></div>
->>>>>>> c51b8d9e4c04a7c4112def98897c10046662c564
     </div>
   </div>
 </div>
-<<<<<<< HEAD
+<div id="footer">
+  <%= render "layouts/footer" %>
+</div>
 <div></div>
-=======
-<<<<<<< HEAD
 
-=======
 <h1>マイページ</h1>
 <h4>登録情報</h4>
 <button type="button" class="btn btn-danger">編集する</button>
 
 <h4>配送先</h4>
 <h4>注文履歴</h4>
->>>>>>> origin/develop
->>>>>>> c51b8d9e4c04a7c4112def98897c10046662c564
+
