--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,3 +1,6 @@
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
 <h1>本当に退会しますか</h1>
 <p>退会すると、会員登録情報や</br>
 これまでの購入履歴が閲覧できなくなります。</br>
@@ -5,4 +8,6 @@
 
 <%= link_to '退会しない',public_customer_path(@public.id),class: "btn btn-primary" %>
 <%= link_to "退会する",public_withdraw_user_path(@public.id), method: :patch,class: "btn btn-danger" %>
-
+<div id="footer">
+  <%= render "layouts/footer" %>
+</div>
