--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,4 +1,6 @@
-
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
 <h3 class="ml-4">商品一覧</h3>
 <div class="row">
   <div class="card-deck">
@@ -18,4 +20,7 @@
       </div>
     <% end %>
   </div>
+</div>
+<div id="footer">
+  <%= render "layouts/footer" %>
 </div>
