--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,3 +1,6 @@
+<div id="header">
+  <%= render "layouts/header" %>
+</div>
 <div class="container my-5">
   <div class="row">
     <div class="col-md-9 offset-md-1">
@@ -32,3 +35,6 @@
       </div>
     </div>
   </div>
+<div id="footer">
+  <%= render "layouts/footer" %>
+</div>
