--- a/app/views/public/orders/thanks.html.erb
+++ b/app/views/public/orders/thanks.html.erb
@@ -23,7 +23,7 @@
     <h1>ご注文ありがとうございました !</h1>
   </div>
   <div>
-    <%= link_to '注文履歴一覧を見る', orders_path, class:"fas fa-scroll fa-2x d-flex align-items-center justify-content-center", style:'height: 100px' %>
+    <%= link_to '注文履歴一覧を見る', public_orders_path, class:"fas fa-scroll fa-2x d-flex align-items-center justify-content-center", style:'height: 100px' %>
   </div>
 </div>
 
