--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -30,7 +30,7 @@
           <%= f.label :address_number_2, "登録先の住所" %>
           <div class="row">
             <div class="col-12 ml-5">
-            <%= f.collection_select(:registered, current_public.addresses.all, :id, :select_address, placeholder: "-- 選択してください --") %>
+            <%= f.collection_select(:registered, current_public.addresses.all, :id, :full_deliveries, placeholder: "-- 選択してください --") %>
             </div>
           </div>
         </div>
