--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5 flex-column">
  <div class="row">
-  <h3 class="col- table-active text-center">注文履歴一覧</h3>
+  <h3 class="col-5 table-active text-center">注文履歴一覧</h3>
  </div>
 
   <div class="row">
