--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -17,10 +17,10 @@
       <tbody>
         <% @orders.each do |order| %>
           <tr>
-            <td><%= link_to order.created_at, admin_order_path(order.id) %></td>
+            <td><%= link_to order.created_at.strftime('%Y/%m/%d %H:%M:%S'), admin_order_path(order.id) %></td>
             <td><%= order.public.last_name %><%= order.public.first_name %></td>
             <td><%= order.order_items.sum(:item_quantity) %></td>
-            <td><%= order.order_status %></td>
+            <td><%= order.order_status_i18n %></td>
           </tr>
         <% end %>
       </tbody>
