--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,15 +1,15 @@
 <div class="container mt-5 flex-column">
-  <div class="row">
-    <div class="col">
-      <div class="sidebar_content"><%= render 'layouts/category', categories: @categories %></div>
-    </div>
-  </div>
   <div class="row my-3">
     <h3 class="col-3 table-active text-center">商品一覧(全<%= @items.count %>件)</h3>
   </div>
     <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col-3">
+      <div class="sidebar_fixed">
+        <%= render 'layouts/category', categories: @categories %>
+      </div>
+      </div>
       <% @items.each do |item| %>
-      <div class="col-9">
+      <div class="col">
         <div class="card mb-5">
           <%= link_to public_item_path(item) do %>
             <%= attachment_image_tag item, :image, size: "253x170" %>
