--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container my-5">
   <div class="row">
     <div class="mx-auto">
-      <h2><%= @public.last_name %><%= @public.first_name %>さんの会員詳細</h2>
-      <table>
+      <h2 class="table-active text-center"><%= @public.last_name %><%= @public.first_name %>さんの会員詳細</h2>
+      <table class="table table-hover table-inverse table-bordered">
         <tr>
           <th>会員ID</th>
           <td><%= @public.id %></td>
@@ -42,13 +42,12 @@
           </td>
         </tr>
       </table>
-      <div class="btn-toolbar">
-        <diV class="btn-group">
-          <button><%= link_to '編集する', edit_admin_customer_path(@public) %></button>
-          <button><%= link_to '注文履歴一覧を見る', admin_order_path(@public) %></button>
-        </diV>
-
-      </div>
+      <table>
+        <tr>
+          <td><%= link_to '編集する', edit_admin_customer_path(@public), class: "btn btn-primary" %></td>
+          <td><%= link_to '注文履歴一覧を見る', admin_order_path(@public), class: "btn btn-dark" %></td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
