--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,9 +1,15 @@
-<div class="container">
+<div class="container my-5">
   <div class="row">
-    <div class="col-md-8 mx-auto">
+    <div class="mx-auto">
+      <h2 class="table-active text-center">ジャンル編集</h2>
       <%= form_with model: @category, url: admin_category_path, local: true do |f| %>
-        <div class="form-group"><%= f.text_field :name %></div>
-        <div class="active"><%= f.submit "変更を保存", class: "btn btn-sm btn-success" %></div>
+        <div class="form-group">
+          <%= f.label "ジャンル名" %><br>
+          <%= f.text_field :name %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "変更を保存", class: "btn btn-sm btn-success" %>
+        </div>
       <% end %>
     </div>
   </div>
