--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,57 +1,67 @@
-<<<<<<< HEAD
 <div class="container flex-column">
 　<div class="row my-3">
   <h3 class="col-3 table-active text-center">会員情報編集</h3>
   </div>
-    <div class="row">
-=======
-<div class="container">
-  <h2>会員情報編集</h2>
-  <div class="row">
-    <div class="col">
->>>>>>> d38db987cc5df658b13cae9ea110ff45eea0f580
-      <%= form_with model:@public, url:"/public/customers/#{@public.id}", local:true do |f| %>
-        
-        <div class="col mb-2">
-        <%= f.label :名前%>
-        <%= f.text_field :last_name %>
-        <%= f.text_field :first_name %>
-        </div>
-        
-        <div class="col mb-2">
-        <%= f.label :フリガナ%>
-        <%= f.text_field :last_kana_name %>
-        <%= f.text_field :first_kana_name %>
-        </div>
-        
-        <div class="col mb-2">
-        <%= f.label :メールアドレス%>
-        <%= f.email_field :email %>
-        </div>
-        
-        <div class="col mb-2">
-        <%= f.label :郵便番号%>
-        <%= f.text_field :postalcode %>
-        </div>
-        
-        <div class="col mb-2">
-        <%= f.label :住所%>
-        <%= f.text_field :address %>
-        </div>
-        
-        <div class="col mb-2">
-        <%= f.label :電話番号%>
-        <%= f.text_field :telephone %>
-        </div>
-        
-      <div class="col">
-        <%= f.submit '編集内容を保存',class: "btn btn-sm btn-success" %>
-      </div>
-      <div class="col">
-      </div>
-      <%= link_to '退会する', public_confirm_unsubscribe_path(@public.id), class: "btn btn-sm btn-danger" %>
-      <% end %>
+  <%= form_with model:@public, url:"/public/customers/#{@public.id}", local:true do |f| %>
+    <div class="form-group">
+    <div class="col-sm-9 form-inline">
+    <label class="col-sm-3">氏名</label>
+    <%= f.text_field :last_name %>
+    <label class="col-sm-2"></label>
+    <%= f.text_field :first_name%>
     </div>
+  </div>
 
+  <div class="form-group">
+    <div class="col-sm-9 form-inline">
+    <label class="col-sm-3">フリガナ</label>
+    <%= f.text_field :last_kana_name %>
+    <label class="col-sm-2"></label>
+    <%= f.text_field :first_kana_name %>
+    </div>
+  </div>
+
+  <div class="form-group ">
+    <div class="col-sm-9 form-inline mb-3">
+    <label class="col-sm-3">メールアドレス</label>
+    <%= f.email_field :email %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-9 form-inline mb-3">
+    <label class="col-sm-3">郵便番号 </label>
+     <%= f.text_field :postalcode %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-9 form-inline mb-3">
+    <label class="col-sm-3">住所 </label>
+    <%= f.text_field :address %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-9 form-inline mb-3">
+    <label class="col-sm-3">電話番号 </label>
+    <%= f.text_field :telephone %>
+    </div>
+  </div>
+
+  <div class="actions">
+    <div class="col-sm-5 form-inline mb-3">
+    <div class="col-sm-7 text-center">
+    <%= f.submit '編集内容を保存',class: "btn btn-sm btn-success" %>
+    </div>
+    </div>
+  </div>
+  <div class="actions">
+    <div class="col-sm-5 form-inline mb-3">
+    <div class="col-sm-7 text-center">
+  <%= link_to '退会する', public_confirm_unsubscribe_path(@public.id), class: "btn btn-sm btn-danger" %>
+    </div>
+    </div>
+  <% end %>
   </div>
 </div>
