--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="row"%>
     <div class="col-px-0"><h5><strong>登録情報</strong></h5></div>
-    <div class="col mb-3"><%= link_to '編集する',edit_public_customer_path(@public), class: "btn btn-success" %></div>
+    <div class="col mb-3"><%= link_to '編集する',edit_public_customer_path(@public), class: "btn btn-sm btn-success" %></div>
     <table class="table table-bordered" >
       <tr>
         <td class="table-active col-md-3">氏名</td>
@@ -31,10 +31,10 @@
         <td><%= @public.email %></td>
       </tr>
     </table>
-      <div class="col-px-0"><h5><strong>配送先</strong></h5></div>
-      <div class="col-md-2 mb-3"><%= link_to "一覧を見る", public_orders_path,  class:"btn btn-primary" %></div>
-      <div class="col-px-0"><h5><strong>注文履歴</strong></h5></div>
-      <div class="col-md-2 mb-3"><%= link_to "一覧を見る", public_addresses_path, class: "btn btn-primary" %></div>
+    <div class="col-px-0 "><h5><strong>配送先</strong></h5></div>
+    <div class="col-md-2"><%= link_to "一覧を見る", public_orders_path,  class: "btn btn-sm btn-primary" %></div>
+    <div class="col-px-0"><h5><strong>注文履歴</strong></h5></div>
+    <div class="col"><%= link_to "一覧を見る", public_addresses_path, class: "btn btn-sm btn-primary" %></div>
   </div>
 </div>
 
