--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,8 +1,12 @@
-<h1>本当に退会しますか</h1>
-<p>退会すると、会員登録情報や</br>
-これまでの購入履歴が閲覧できなくなります。</br>
-退会する場合は、「退会する」をクリックしてください。</p>
-
-<%= link_to '退会しない',public_customer_path(@public.id),class: "btn btn-primary" %>
-<%= link_to "退会する",public_withdraw_user_path(@public.id), method: :patch,class: "btn btn-danger" %>
-
+<div class="container flex-column">
+　<div class="row my-3">
+    <div class="col-12 text-center mb-3">
+    <p><strong>本当に退会しますか</strong></p>
+    <p>退会すると、会員登録情報や</br>
+    これまでの購入履歴が閲覧できなくなります。</br>
+    退会する場合は、「退会する」をクリックしてください。</p>
+    <%= link_to '退会しない',public_customer_path(@public.id),class: "btn btn-primary" %>
+    <%= link_to "退会する",public_withdraw_user_path(@public.id), method: :patch,class: "btn btn-danger" %>
+    </div>
+  </div>
+</div>
