--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -14,7 +14,7 @@
         <%= f.text_field :first_name, autofocus: true %>
         </div>
       </div>
-      
+
       <div class="form-group">
         <div class="col-sm-9 form-inline">
         <label class="col-sm-3">フリガナ（セイ）</label>
@@ -30,28 +30,28 @@
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
         </div>
       </div>
-      
+
       <div class="form-group">
         <div class="col-sm-9 form-inline mb-3">
         <label class="col-sm-3">郵便番号 </label>
          <%= f.text_field :postalcode, autofocus: true %>
         </div>
       </div>
-      
+
       <div class="form-group">
         <div class="col-sm-9 form-inline mb-3">
         <label class="col-sm-3">住所 </label>
         <%= f.text_field :address, autofocus: true %>
         </div>
       </div>
-      
+
       <div class="form-group">
         <div class="col-sm-9 form-inline mb-3">
         <label class="col-sm-3">電話番号 </label>
         <%= f.text_field :telephone, autofocus: true %>
         </div>
       </div>
-      
+
       <div class="form-group">
         <div class="col-sm-9 form-inline mb-3">
         <label class="col-sm-3">パスワード
@@ -71,8 +71,8 @@
       </div>
 
       <div class="actions">
-        <div class="col-sm-9 form-inline mb-3">
-        <div class="col-sm-3">
+        <div class="col-sm-5 form-inline mb-3">
+        <div class="col-sm-7 text-center">
         <%= f.submit "新規登録",class:"btn btn-sm btn-success btn-primary mb-3"%>
         </div>
         </div>
