--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,41 +1,47 @@
-  <div class="main-visual">
-      <div style="padding-top: 100px;">
-        <div class="main-visual-content mx-auto">
-          <h6 style="color: #fff; padding-top: 50px;">
-            ようこそ、ながのCAKEへ<br>
-            <br>
-            このサイトはケーキ販売のECサイトになります。<br>
-            会員でない方も商品の閲覧はできますが、<br>
-            購入には会員登録が必要になります。
-          </h6>
+  <div class="container">
+    <div class="row pb-5 mt-5">
+      <%= render 'layouts/category', categories: @categories %>
+      <div class="col-9">
+        <div class="main-visual">
+          <div style="padding-top: 100px;">
+            <div class="main-visual-content mx-auto">
+              <h6 style="color: #fff; padding-top: 50px;">
+                ようこそ、ながのCAKEへ<br>
+                <br>
+                このサイトはケーキ販売のECサイトになります。<br>
+                会員でない方も商品の閲覧はできますが、<br>
+                購入には会員登録が必要になります。
+              </h6>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-　　<div class='d-flex'>
-　　  <h2 style='color: #82654D; font-size: 40px;'>New Products</h2>
-      <p class='mt-3' style='font-size: 20px;'>ー新着商品ー</p>
-　　</div>
-    <div class='mt-3'>
-      <div class="slider">
-        <% @items.each do |item| %>
-          <div class="col-3 px-2">
-            <%= link_to public_item_path(item) do %>
-              <%= attachment_image_tag item, :image, size: "260x200" %>
-            <% end %>
-            <%= link_to public_item_path(item) do %>
-              <p class='font-weight-bold text-dark mt-2 mb-1'><%= item.name %></p>
-            <% end %>
-            ¥<%= item.tax_excluded_price.to_s(:delimited) %>
-          </div>
-        <% end %>
+　　  <div class='d-flex'>
+　　    <h2 style='color: #82654D; font-size: 40px;'>New Products</h2>
+        <p class='mt-3' style='font-size: 20px;'>ー新着商品ー</p>
+　　  </div>
+      <div class='mt-3'>
+        <div class="slider">
+          <% @items.each do |item| %>
+            <div class="col-3 px-2">
+              <%= link_to public_item_path(item) do %>
+                <%= attachment_image_tag item, :image, size: "260x200" %>
+              <% end %>
+              <%= link_to public_item_path(item) do %>
+                <p class='font-weight-bold text-dark mt-2 mb-1'><%= item.name %></p>
+              <% end %>
+              ¥<%= item.tax_excluded_price.to_s(:delimited) %>
+            </div>
+          <% end %>
+        </div>
+        <p class="text-right"><%= link_to '全ての商品を見る >', public_items_path, style:'color: #82654D;' %></p>
       </div>
-      <p class="text-right"><%= link_to '全ての商品を見る >', public_items_path, style:'color: #82654D;' %></p>
-    </div>
-    <script>
-      $('.slider').slick({
-        infinite: true,
-        slidesToShow: 4,
-        slidesToScroll: 4,
-      });
-    </script>
+      <script>
+        $('.slider').slick({
+          infinite: true,
+          slidesToShow: 4,
+          slidesToScroll: 4,
+        });
+      </script>
   </div>
