[Update]商品関係のレイアウト・フラッシュメッセージの表示

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,9 @@
           080-0000-0000
         </p>
       </div>
-      <div class="mx-auto">CopyRight NaganoCake.inc</div>
+      <div class="mx-auto">
+        <p>CopyRight NaganoCake.inc<p>
+      </div>
       <div class='contact'>
         <%= link_to url:"#", class:"top-link" do %>
           <i class="fab fa-instagram icon"></i>
