--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container my-5">
+ <div class="flash-message"><%= flash[:success] %></div>
  <div class="row">
   <div class="col-4 mx-auto">
    <h2 class="table-active text-center">ジャンル追加</h2>
