--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,44 +1,44 @@
-<div class="container flex-column">
- <div class="row my-3">
-  <h3 class="col-3 table-active text-center">商品編集</h3>
- </div>
+<div class="container mt-5">
  <div class="row">
-  <div class="col-3">
+  <div class="mx-auto">
+   <h3 class="table-active text-center">商品編集</h3>
+
    <%= form_with model: @item, url: admin_item_path, local: true do |f| %>
 
     <div class="form-group">
      <%= f.label :"商品名" %><br>
      <%= f.text_field :name %>
     </div>
- 
+
     <div class="form-group">
      <%= f.label :"商品画像" %><br>
      <%= f.attachment_field :image %>
     </div>
- 
+
     <div class="form-group">
      <%= f.label :"商品説明" %><br>
      <%= f.text_area :explanation %>
     </div>
- 
+
     <div class="form-group">
      <%= f.label :"税抜価格" %><br>
      <%= f.text_field :tax_excluded_price %>
     </div>
- 
+
     <div class="form-group">
      <%= f.label :"ジャンル" %><br>
      <%= f.collection_select :category_id, Category.all, :id, :name, {prompt: "-- 選択してください --"} %>
     </div>
- 
+
     <div class="form-group">
      <%= f.label :"販売ステータス" %><br>
      <%= f.select :sale_status, [['販売中', true], ['販売停止', false]], prompt: "-- 選択してください --" %>
     </div>
- 
+
     <div class="form-group">
      <%= f.submit '変更を保存', class: "btn btn-primary"%>
     </div>
    <%end%>
   </div>
+ </div>
 </div>
