--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container mt-5 flex-column">
+ <div class="flash-message"><%= flash[:success] %></div>
  <div class="row my-3">
   <h3 class="col-3 table-active text-center">商品一覧</h3>
  </div>
