--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -20,7 +20,7 @@
        <td><%= public.email %></td>
        <td class>
         <% if public.user_status %>
-         <p>退会</p>
+         <p>退会済み</p>
         <% else %>
          <p>有効</p>
         <% end %>
