--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -27,7 +27,7 @@
           </tr>
           <tr class="row">
             <td class="col-3 table-active border-top-0 border-dark">ステータス</td>
-            <td class="col-9 border-left-0 border-top-0 border-dark"><%= @order.order_status %></td>
+            <td class="col-9 border-left-0 border-top-0 border-dark"><%= @order.order_status_i18n %></td>
           </tr>
         </tbody>
       </table>
