--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -75,7 +75,7 @@
     </div>
       <div class="row mx-auto">
        <div class="">
-        <%= link_to "買い物を続ける", public_items_path, class: "btn btn-primary" %>
+        <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
       </div>
        <div class="ml-auto">
         <table class="table table-bordered">
