--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container mt-5 flex-column">
  <div class="row my-3">
   <h3 class="col-3 table-active text-center">商品一覧</h3>
+  <a class="col-6 fas fa-plus-circle fa-2x" href="/admin/items/new"></a>
  </div>
  <div class="row">
   <table class="table">
