--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,13 +1,15 @@
 <div class="container mt-5">
 
  <div class="row align-items-start">
-  <%= render 'public/homes/genres_search', genres: @genres %>
-  <div class="col-md-5">
+  <div class="col-2">
+    <%= render 'layouts/category', categories: @categories %>
+  </div>
+  <div class="col- mt-4">
    <h3 class="table-active text-center">商品詳細</h3>
-   <%= attachment_image_tag(@item, :image, size: "350x350") %>
+   <%= attachment_image_tag(@item, :image, size: "400x300") %>
   </div>
 
-  <div class="col-md-5 offset-md-1">
+  <div class="col-4 mt-4">
    <table class="table">
     <tr>
      <th>商品名</th>
